adapt readme, run black

--- a/src/GP_Main.ipynb
+++ b/src/GP_Main.ipynb
@@ -87,7 +87,9 @@
     }
    ],
    "source": [
-    "df_total = pd.read_csv(\"../data/DailyDelhiClimate.csv\", parse_dates=True, index_col=\"date\")\n",
+    "df_total = pd.read_csv(\n",
+    "    \"../data/DailyDelhiClimate.csv\", parse_dates=True, index_col=\"date\"\n",
+    ")\n",
     "\n",
     "fig = plt.figure(figsize=(30, 10))\n",
     "rows = 2\n",
@@ -155,12 +157,12 @@
     "# Creation of boxplots for train data\n",
     "fig, ax = plt.subplots(1, 4, figsize=(30, 10))\n",
     "\n",
-    "df_train.boxplot('meantemp', ax=ax[0])\n",
-    "df_train.boxplot('humidity', ax=ax[1])\n",
-    "df_train.boxplot('wind_speed', ax=ax[2])\n",
-    "df_train.boxplot('meanpressure', ax=ax[3])\n",
+    "df_train.boxplot(\"meantemp\", ax=ax[0])\n",
+    "df_train.boxplot(\"humidity\", ax=ax[1])\n",
+    "df_train.boxplot(\"wind_speed\", ax=ax[2])\n",
+    "df_train.boxplot(\"meanpressure\", ax=ax[3])\n",
     "\n",
-    "plt.subplots_adjust(wspace=0.5) \n",
+    "plt.subplots_adjust(wspace=0.5)\n",
     "\n",
     "plt.suptitle(\"Training data\", fontsize=25)\n",
     "plt.show()\n",
@@ -168,13 +170,13 @@
     "# Creation of boxplots for test data\n",
     "fig, ax = plt.subplots(1, 4, figsize=(30, 10))\n",
     "\n",
-    "df_test.boxplot('meantemp', ax=ax[0])\n",
-    "df_test.boxplot('humidity', ax=ax[1])\n",
-    "df_test.boxplot('wind_speed', ax=ax[2])\n",
-    "df_test.boxplot('meanpressure', ax=ax[3])\n",
+    "df_test.boxplot(\"meantemp\", ax=ax[0])\n",
+    "df_test.boxplot(\"humidity\", ax=ax[1])\n",
+    "df_test.boxplot(\"wind_speed\", ax=ax[2])\n",
+    "df_test.boxplot(\"meanpressure\", ax=ax[3])\n",
     "\n",
     "plt.suptitle(\"Test data\", fontsize=25)\n",
-    "plt.subplots_adjust(wspace=0.5) \n",
+    "plt.subplots_adjust(wspace=0.5)\n",
     "\n",
     "plt.show()"
    ]
@@ -198,14 +200,23 @@
     "Q3_train = df_train.quantile(0.75)\n",
     "IQR_train = Q3_train - Q1_train\n",
     "\n",
-    "df_train = df_train[~((df_train < (Q1_train - 1.5 * IQR_train)) | (df_train > (Q3_train + 1.5 * IQR_train))).any(axis=1)]\n",
+    "df_train = df_train[\n",
+    "    ~(\n",
+    "        (df_train < (Q1_train - 1.5 * IQR_train))\n",
+    "        | (df_train > (Q3_train + 1.5 * IQR_train))\n",
+    "    ).any(axis=1)\n",
+    "]\n",
     "\n",
     "# Removal of outliers in the test set\n",
     "Q1_test = df_test.quantile(0.25)\n",
     "Q3_test = df_test.quantile(0.75)\n",
     "IQR_test = Q3_test - Q1_test\n",
     "\n",
-    "df_test = df_test[~((df_test < (Q1_test - 1.5 * IQR_test)) | (df_test > (Q3_test + 1.5 * IQR_test))).any(axis=1)]"
+    "df_test = df_test[\n",
+    "    ~(\n",
+    "        (df_test < (Q1_test - 1.5 * IQR_test)) | (df_test > (Q3_test + 1.5 * IQR_test))\n",
+    "    ).any(axis=1)\n",
+    "]"
    ]
   },
   {
@@ -250,26 +261,26 @@
     "# Creation of boxplots for train data\n",
     "fig, ax = plt.subplots(1, 4, figsize=(30, 10))\n",
     "\n",
-    "df_train.boxplot('meantemp', ax=ax[0])\n",
-    "df_train.boxplot('humidity', ax=ax[1])\n",
-    "df_train.boxplot('wind_speed', ax=ax[2])\n",
-    "df_train.boxplot('meanpressure', ax=ax[3])\n",
+    "df_train.boxplot(\"meantemp\", ax=ax[0])\n",
+    "df_train.boxplot(\"humidity\", ax=ax[1])\n",
+    "df_train.boxplot(\"wind_speed\", ax=ax[2])\n",
+    "df_train.boxplot(\"meanpressure\", ax=ax[3])\n",
     "\n",
     "plt.suptitle(\"Training data\", fontsize=25)\n",
-    "plt.subplots_adjust(wspace=0.5) \n",
+    "plt.subplots_adjust(wspace=0.5)\n",
     "\n",
     "plt.show()\n",
     "\n",
     "# Creation of boxplots for test data\n",
     "fig, ax = plt.subplots(1, 4, figsize=(30, 10))\n",
     "\n",
-    "df_test.boxplot('meantemp', ax=ax[0])\n",
-    "df_test.boxplot('humidity', ax=ax[1])\n",
-    "df_test.boxplot('wind_speed', ax=ax[2])\n",
-    "df_test.boxplot('meanpressure', ax=ax[3])\n",
+    "df_test.boxplot(\"meantemp\", ax=ax[0])\n",
+    "df_test.boxplot(\"humidity\", ax=ax[1])\n",
+    "df_test.boxplot(\"wind_speed\", ax=ax[2])\n",
+    "df_test.boxplot(\"meanpressure\", ax=ax[3])\n",
     "\n",
     "plt.suptitle(\"Training data\", fontsize=25)\n",
-    "plt.subplots_adjust(wspace=0.5) \n",
+    "plt.subplots_adjust(wspace=0.5)\n",
     "\n",
     "plt.show()"
    ]
