--- a/src/GP_Main.ipynb
+++ b/src/GP_Main.ipynb
@@ -54,7 +54,9 @@
     "IN_COLAB = \"google.colab\" in sys.modules\n",
     "data_dir = \"../data/\"\n",
     "if IN_COLAB:\n",
-    "  data_dir = \"https://raw.githubusercontent.com/batcapricorn/prob-ml-project/main/data/\""
+    "    data_dir = (\n",
+    "        \"https://raw.githubusercontent.com/batcapricorn/prob-ml-project/main/data/\"\n",
+    "    )"
    ]
   },
   {
