--- a/src/GP_Main.ipynb
+++ b/src/GP_Main.ipynb
@@ -528,7 +528,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A $R^2$ of 0.73 👍 \n",
+    "A $R^2$ of 0.75 👍 \n",
     "\n",
     "Not bad, but let's see if we can do better by adjusting some hyperparameters."
    ]
@@ -718,7 +718,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're getting closer to our baseline now!\n",
+    "This yields only a marginal improvement.\n",
     "### ConstantKernel\n",
     "A different approach could be to use a constant kernel that incorporates temperature increase caused by climate change."
    ]
@@ -796,7 +796,7 @@
    "metadata": {},
    "source": [
     "# Conclusion\n",
-    "Tuning our model did not help much - performance seems to converge at $R^2 = 0.758$. We also played around with a linear kernel, which surprisingly increased $R^2$. But this was rather due to the chosen test set that wrongly appears to be drawn from a linear distribution. So watch out when picking a kernel! 😟\n",
+    "Tuning our model did not help much - performance seems to converge at $R^2 = 0.759$. We also played around with a linear kernel, which surprisingly increased $R^2$. But this was rather due to the chosen test set that wrongly appears to be drawn from a linear distribution. So watch out when picking a kernel! 😟\n",
     "\n",
     "The benefit of incorporating custom kernels was still demonstrated: expert knowledge can be used to improve model performance by adjusting kernels.\n",
     "\n",
@@ -806,9 +806,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "prob-ml-project-acRXiJBF",
+   "display_name": "project_env",
    "language": "python",
-   "name": "python3"
+   "name": "project_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -820,7 +820,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
